--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require_self
  */
 
+/* Добавление стилей в форму валидации */
+
 .field_with_errors input {
 	border-color: red;
 }
@@ -21,3 +23,4 @@
 .field_with_errors textarea {
 	border-color: red;
 }
+
